添加基本配置文件和axios

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue3.0移动端模板",
+  "name": "vue-mobile-template",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,9 +14,11 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.16",
     "@vue/cli-service": "^3.0.0-beta.16",
+    "axios": "^0.18.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
-    "vue-template-compiler": "^2.5.16"
+    "vue-template-compiler": "^2.5.16",
+    "webpack-merge": "^4.1.2"
   },
   "browserslist": [
     "> 1%",
