--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vue/cli-plugin-babel": "^3.0.0-beta.16",
     "@vue/cli-service": "^3.0.0-beta.16",
     "axios": "^0.18.0",
+    "js-cookie": "^2.2.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.16",
